SwashRL official changelog

VERSION 0.035

  Version 0.035 breaks save file compatibility.

  Changed:
   - The color palette for the SDL terminal interface has been changed to a
     variation on the Tango color palette to provide more visible and vibrant
     colors.  The Money color pair still uses the old Green color, now
     referred to in the `init_colors` function as C_MONEY.
     See https://swash.link/images/v0.035-color-comparison.png
     for a side-by-side.
   - The deprecated Snow color pair has been removed and replaced with a
     Dead_Snow_Tree color pair, to be used to represent dead trees in snowy
     environments.
   - The Error color pair on the curses interface is now Gray on Red, rather
     than White on Red, to match the SDL terminal interface and avoid
     confusion with the Festive_Player color pair.
   - The Royal color pair is now Gold on Royal Purple, rather than Yellow on
     Royal Purple.
   - Monsters now have two character attributes: Strength and Endurance.
   - Items now have variables for Strength and Endurance bonuses, to be
     implemented at a later time.
   - The number of equipment slots for the player has been reduced to the
     following list:
      * Weapon-hand
      * Off-hand
      * Helmet
      * Armor
      * Shield
      * Boots
      * Left ring
      * Right ring
      * Necklace
      * Clothes
      * Tail
   - A monster's equipment slots are now in an associative array separate
     from the inventory.
   - A monster's wallet and inventory are now separate arrays not stored in
     a struct.
   - A monster's inventory is now a dynamic array.  In a future version of the
     software, the number of inventory slots a monster gets will be determined
     based on their species.
   - The flags used to determine an item's equipment slot and to determine the
     equipment slot on the equipment screen are now analogous and both belong
     to the `Slot` enum.